--- a/templates/nx.html
+++ b/templates/nx.html
@@ -33,8 +33,9 @@
 
             #mynetwork {
                 width: 100vw;
-                height: 80vh;
-                border: 1px solid rgb(214, 2, 2);
+                height: 100vh;
+                overflow: hidden;
+                /*border: 1px solid rgb(214, 2, 2);*/
                 background-color: #ffffff;
                 position: relative;
             }
