--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -136,3 +136,40 @@ select, input[type="range"] {
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
+.mytooltip {
+    position: relative;
+    display: inline-block;
+    font-size: 8px;
+    color: royalblue;
+    font-family: "Lucinda Grande", "Lucinda Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+    font-weight: bold;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    padding-left: 3px;
+    padding-top: -10px;
+    background: #fff;
+    border: 2px solid royalblue;
+}
+
+.mytooltip .tooltiptext {
+    visibility: hidden;
+    width: 230px;
+    background-color: ghostwhite;
+    color: black;
+    border-radius: 6px;
+    padding: 5px;
+    font-weight: normal;
+    font-size: 10px;
+    text-align: justify;;
+
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+}
+
+.mytooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+
